--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/translations/messages.fr.yml
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/translations/messages.fr.yml
@@ -1,8 +1,12 @@
 buttons:
     new:
         project: Nouveau projet
+        task: Nouvelle tâche
 project:
     list: Liste des projets
     id: Id
     name: Nom
-
+task:
+    list: Liste des tâches
+    id: Id
+    name: Nom
