[Role] Add Creation/Update form and deletion

--- a/src/ProjectManager/Bundle/UserBundle/Resources/translations/messages.en.yml
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/translations/messages.en.yml
@@ -18,4 +18,12 @@ user:
         lastName: Last name
         email: Email
 
+role:
+    form:
+        name: Name
+    id: Id
+    name: Name
+    actions: Actions
+    creation: New role
+    update: Update role
 
