Change Role management in team UI

--- a/src/ProjectManager/Bundle/UserBundle/Resources/translations/messages.fr.yml
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/translations/messages.fr.yml
@@ -27,3 +27,8 @@ role:
     creation: Nouveau role
     update: Modification du role
 
+team:
+    member:
+        add: Ajouter un membre à l'équipe
+
+
