--- a/src/ProjectManager/Bundle/UserBundle/Resources/translations/messages.fr.yml
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/translations/messages.fr.yml
@@ -11,6 +11,7 @@ user:
     actions: Actions
     list: Liste d'utilisateurs
     new: Nouvel utilisateur
+    select: Choisissez un utilisateur
     form:
         username: Nom d'utilisateur
         password: Mot de passe
